Added Club Activities Section

--- a/main.tex
+++ b/main.tex
@@ -109,12 +109,22 @@
                 \end{tabular}
             \end{center}
 
-            The main factor in decision making seemed to be interest in learning to code and to coding in general. Secondary factors included boosting one's career.
+            The main factor in decision-making seemed to be interest in learning to code and to coding in general. Secondary factors included boosting one's career.
     \section{Implementation Details}
 
         \subsection{Club Activities}
 
+            Unlike other, big-tent style after-school clubs, the activities of the Coding Club are well-defined and narrow.
 
+            Coding Club will be dedicated mainly to two activities:
+            \begin{itemize}
+                \item Learning to code/program in a collaborative environment
+                \item Granting a space for students to share projects and milestones
+            \end{itemize}
+
+            A way to think about the coding club is, essentially, a more focused version of Digital Art club.
+
+            It is the sincere belief of this proposal that a club that engages in these activities is possible.
 
         \subsection{Techical Issues}
 
