--- a/main.tex
+++ b/main.tex
@@ -128,12 +128,25 @@
 
         \subsection{Techical Issues}
 
-            The biggest issue to solve with a coding club is what computers to use and how. Chromebooks are out of the equation due to their limited set of features and third-party apps. While coding online with platforms like \textsc{Replit} is possible, it is not as convenient. Therefore, \textsc{MacBooks} are a better option. With \textsc{MacBooks}, it is possible to download apps and use the command line (Terminal). These \textsc{MacBooks} can be borrowed from the art room, as they are rarely used, if ever, during wednesday art club. This, however, does rule out the club occuring on Mondays.
+            One of the issues to solve with a possible coding club is the computer situation. To code on a computer, access to the command line and the ability to write to a computer's disk is needed. Thankfully, \textsc{Chromebooks} can be used for coding. When the \textit{Linux Development Environment} is turned on, the command line, along with VSCode and other apps, can be used.
 
             One obvious issue with this solution is the reality of computer restrictions. The reasons computer restrictions exist is to make sure that actions that modify the computer, like downloading apps or messing with the command line, are infeasable. A possible solution to this thorny issue is to lift restrictions on computers during \textsc{Coding Club}. This would create another issue with bad-actors.
 
             Bad actors are not in coding club to code, but to play games or otherwise abuse computers. This is where restrictions come in. But if restrictions have been lifted, the above behaviour would be too easy for some. While there are a few possible solutions to this problem, any solution would undeniably need to be made by those with more authority or knowledge of the issue, such as \textsc{Mr. Pantoliano} and/or the \textsc{Leadership Team}. For this above reason, this document will not weigh in on the issue any longer.
 
+        \section{Minor Details}
+
+            \subsection{Avenues for Action}
+
+                This section discusses the actions one could take to insure the formation of a coding club after reading this unnecessarily long manifesto.
+
+                While the existence of a coding club could be decided by a school-wide referendum or student council vote, it should and likely will be deliberated and decided on by members of the \textsc{Winston Leadership Team}.
+
+                Some other actions one could take would be to, if you agree with the thesis of this proposal, speak out in favor of a coding club, or if you don't, explaining this opposition.
+
+            \subsection{Acknowledgements}
+
+                I would like to thank everyone who take the time out of their days to answer the survey, \textsc{Mr. Bischop} for general consulting, \textsc{Mr. Pantoliano} for patiently correcting technical errors of mine, and finally the \textsc{Leadership Team} for dedicating their time to deliberating on this issue and reading this detailed proposal. If I compliment them enough, I can get this passed!\footnote{This was a joke.}
 \end{document}
 
 
