Updated Pie Chart

--- a/main.tex
+++ b/main.tex
@@ -72,12 +72,12 @@
 
                 \pie[radius={2},
                     polar,
-                    rotate=-135,
+                    rotate=45,
                     explode = 0.07,
-                    color={gray!80,green!80!yellow!80!blue},
+                    color={green!80!yellow!80!blue, gray!80},
                     text=legend,
                 ]
-                {60.9/No,39.1/Yes}
+                {39.1/Yes, 60.9/No}
 
             \end{tikzpicture}
             \end{center}
