--- a/main.tex
+++ b/main.tex
@@ -8,7 +8,7 @@
 
 \fancyhead{}
 \fancyfoot{}
-\fancyhead[R]{\textcolor{gray!80}{Coding Club Proposal - \nouppercase{\rightmark}}}
+\fancyhead[R]{\textcolor{gray!80}{Coding Club Proposal}}
 \fancyfoot[CR,CL]{\textcolor{gray!80}{Page \thepage}}
 \fancyfoot[L]{\textcolor{gray!80}{Ben Raz}}
 \fancyfoot[R]{\textcolor{gray!80}{\today}}
@@ -34,13 +34,13 @@
 \maketitle
 \pagestyle{fancy}
 
-\section{Introduction}
+\section*{Introduction}
 
-\subsection{Disclaimer}
+\subsection*{Disclaimer}
 
 Contained within this document is a detailed proposal for the creation of a coding club afterschool. While this document argues for the existence of a coding club, it does not specify when it shall occur.
 
-\subsection{Overview}
+\subsection*{Overview}
 
 This document will seek to overcome two thresholds, namely
 
@@ -51,7 +51,7 @@ This document will seek to overcome two thresholds, namely
 
 While I firmly believe in the need and acceptance of a coding club, it's existence is at the sole discretion of the leadership team and/or other concerned parties not explicitly named.
 
-\section{The Need For A \textsc{Coding Club}}
+\section*{The Need For A \textsc{Coding Club}}
 
 While many point to the \textsc{Digital Art Club} as a place to code, it's mandate is far wider and when coding comes up it is often for the purpose of making games using visual coding platforms like \textsc{Scratch}. Although coding comes up, it is often not for it's own sake and never for long. Most people in DA are not interested in learning to code.
 
@@ -60,9 +60,9 @@ Aside from DA club, there are no other options for coding as of today, \today. T
 Increasingly in the last few years, coding has begun to be taught to children at an early age, being seen as an easy-to-learn valuable skill. This makes the abscence of a coding club especially hard to take.
 \newpage
 
-\section{The Demand For A Coding Club}
+\section*{The Demand For A Coding Club}
 
-\subsection{The Survey Results}
+\subsection*{The Survey Results}
 
 \subsubsection{The Raw Numbers}
 Starting October 11th, 2022, a school-wide survey was distributed via Focus to all Winston Students. Each student was presented with a multiple choice question concerning whether they would join a coding club. Additionally, most students wrote a reason justifying their answer. After 23 responses, 9 students answered yes to the question.
@@ -110,9 +110,9 @@ The other previously mentioned question asks the respondent to detail the reason
 \end{center}
 
 The main factor in decision-making seemed to be interest in learning to code and to coding in general. Secondary factors included boosting one's career.
-\section{Implementation Details}
+\section*{Implementation Details}
 
-\subsection{Club Activities}
+\subsection*{Club Activities}
 
 Unlike other, big-tent style after-school clubs, the activities of the Coding Club are well-defined and narrow.
 
@@ -126,7 +126,7 @@ A way to think about the coding club is, essentially, a more focused version of 
 
 It is the sincere belief of this proposal that a club that engages in these activities is possible.
 
-\subsection{Techical Issues}
+\subsection*{Techical Issues}
 
 One of the issues to solve with a possible coding club is the computer situation. To code on a computer, access to the command line and the ability to write to a computer's disk is needed. Thankfully, \textsc{Chromebooks} can be used for coding. When the \textit{Linux Development Environment} is turned on, the command line, along with VSCode and other apps, can be used.
 
@@ -134,9 +134,9 @@ One obvious issue with this solution is the reality of computer restrictions. Th
 
 Bad actors are not in coding club to code, but to play games or otherwise abuse computers. This is where restrictions come in. But if restrictions have been lifted, the above behaviour would be too easy for some. While there are a few possible solutions to this problem, any solution would undeniably need to be made by those with more authority or knowledge of the issue, such as \textsc{Mr. Pantoliano} and/or the \textsc{Leadership Team}. For this above reason, this document will not weigh in on the issue any longer.
 
-\section{Minor Details}
+\section*{Minor Details}
 
-\subsection{Avenues for Action}
+\subsection*{Avenues for Action}
 
 This section discusses the actions one could take to insure the formation of a coding club after reading this unnecessarily long manifesto.
 
@@ -144,7 +144,7 @@ While the existence of a coding club could be decided by a school-wide referendu
 
 Some other actions one could take would be to, if you agree with the thesis of this proposal, speak out in favor of a coding club, or if you don't, explaining this opposition.
 
-\subsection{Acknowledgements}
+\subsection*{Acknowledgements}
 
 I would like to thank everyone who take the time out of their days to answer the survey, \textsc{Mr. Bischop} for general consulting, \textsc{Mr. Pantoliano} for patiently correcting technical errors of mine, and finally the \textsc{Leadership Team} for dedicating their time to deliberating on this issue and reading this detailed proposal. If I compliment them enough, I can get this passed!\footnote{This was a joke.}
 \end{document}
